# ai-planner-backend

./: .gitignore  .pre-comit-config.yml  Dockerfile  README.md  alembic.ini  cleanup_orphaned_data.py  docker-compose.yml  init.sql  pyproject.toml  requirements.txt  setup_minio_events.py
alembic/: env.py
app/: main.py
app/api/v1/: chat.py  documents.py
app/core/: config.py  db.py
app/db/: database.py
app/models/: documents.py
app/services/: cleanup.py  embedding.py  file_watcher.py  pdf_processor.py  rag.py  storage.py  vector_store.py
scripts/: README.md  cleanup_orphaned_data.py
