[project]
name = "ai-planner-backend"
version = "1.0.0"
description = "This is backend for the AI Planner."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.11",
]

[tool.ruff]
line-length = 80
exclude = [
    ".git",
    "__pycache__",
    "tests/*"
]
lint.ignore = ["F401", "E402", "E501"]
lint.select = ["I", "E", "F", "W", "C90"]